added dbscan animation & just plots

--- a/Embedded_Animation.ipynb
+++ b/Embedded_Animation.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "# code based on idea from http://jakevdp.github.io/blog/2013/05/12/embedding-matplotlib-animations/\n",
+    "# code based on http://jakevdp.github.io/blog/2013/05/12/embedding-matplotlib-animations/\n",
     "\n",
     "# requires ffmpeg to be installed\n",
     "\n",
